[gd_scene load_steps=5 format=3 uid="uid://dr7mxq2iswcg"]

[ext_resource type="Script" path="res://Scripts/car_base.gd" id="1_mnjmh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4sajt"]
size = Vector3(4, 1, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n325x"]

[sub_resource type="BoxMesh" id="BoxMesh_bdap3"]
material = SubResource("StandardMaterial3D_n325x")
size = Vector3(4, 1, 2)

[node name="Car" type="Node3D"]
script = ExtResource("1_mnjmh")

[node name="RigidBody3D" type="RigidBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
shape = SubResource("BoxShape3D_4sajt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
mesh = SubResource("BoxMesh_bdap3")

[node name="FrontLeft" type="RayCast3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.5, -1)

[node name="FrontRight" type="RayCast3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -0.5, 1)

[node name="BackLeft" type="RayCast3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.5, -1)

[node name="BackRight" type="RayCast3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, -0.5, 1)
